Version beta2 (#58)
* Delete acdm/EA70 directory

old aCDM development details, not relevant

* Delete acdm/data/Simulations/exampleSimulation directory

data for aCDN,not relevant for DYNAMO-HIA

* Delete acdm/referencexml directory

old examples for aCDM, not relevant for DYNAMO

* Solving issues:#29 #21 #14 #13

 Additional improvements:
 - sizes input windows and parameter windows were also to small
 - In case no dalys can be calculated (scenarios have different
transition rates) this is now added to the label

* Bug in redraw output with 9 diseases fixed plus some cleanup

renamed the folder mehdi to something more fitting
redrawing prevalence gave crash without diseases (due to earlier redraw
fix), is fixed
some classes deleted from acdm as they were obsolete and not used

* some cleanup suppression warnings

* more clean up by suppressing warnings and replacing new Integer

* cleaning of aCDM project

Warnings not removed for depreciated getInstance() as this needs more
thinking how to solve

* more cleaning of backaend

* rest of cleaning backend project

mostly suppressing warnings, some depreciated code replaced

* cleaning of frontend package

- replacing new Integer with Integer.toValue
- suppress warnings for raw type and unused variables
- the width of the field in the scenario selection tab were changed
- some streamers are closed

* SimulationConfiguration window increased in size

In order to show the box for random seed

* updating version tag

* some how code was duplicated in local version

removal made some spaces on other places

* restored viewability of all choice buttons in simulation configuration

the upper part of the simulation configurationscreen was too small
lower buttons were no longer visible